Adjust formatting for screen sizes

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager</title>
     <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/larger.css">
 </head>
 <body>
     <div id="app">
-        <h1>Task Manager</h1>
-        <div id="task-form-container"></div>
-        <div id="task-list-container"></div>
     </div>
     <script type="module" src="/js/main.js"></script>
 </body>
